[package]
name = "engine"
version = "0.1.0"
authors = ["Chay Nabors <chaynabors@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
bytemuck = { version = "1.5.0", features = ["derive"] }
env_logger = "0.8.2"
raw-window-handle = "0.3.3"
rodio = "0.13.0"
shaderc = "0.7.1"
tobj = "2.0.3"
tokio = { version = "1.0.1", features = ["macros", "rt"] }
wgpu = "0.7.0"
winit = "0.24.0"
